--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Inheritance and succession -- Fiction'
 - !lcsh 'Rubies -- Fiction'
 - !lcsh 'Adventure stories'
+- GITenberg
 title: The Chase of the Ruby
 url: http://www.gutenberg.org/ebooks/40349
